syntax = "proto3";

package server;

service ServerService {
  rpc CreateServer (CreateServerRequest) returns (ServerResponse) {}
  rpc GetServers (GetServersRequest) returns (ServerListResponse) {}
  rpc GetAllServers (GetAllServersRequest) returns (ServerListResponse) {}
  rpc UpdateServer (UpdateServerRequest) returns (ServerResponse) {}
  rpc DeleteServer (DeleteServerRequest) returns (ServerResponse) {}
}

message CreateServerRequest {
  string username = 1;
  string name = 2;
  string server_pic = 3;
}

message GetServersRequest {
  string username = 1;
  string query = 2;
}

message GetAllServersRequest {
  string username = 1;
}

message UpdateServerRequest {
  string server_id = 1;
  string username = 2;
  string name = 3;
  string server_pic = 4;
}

message DeleteServerRequest {
  string server_id = 1;
  string username = 2;
}

message ServerResponse {
  string id = 1;
  string name = 2;
  string owner_id = 3;
  string created_at = 4;
  string server_pic = 5;
  string message = 6;
}

message ServerListResponse {
  repeated ServerResponse servers = 1;
}